--- a/1/1.tex
+++ b/1/1.tex
@@ -1,15 +1,16 @@
-\documentclass[a4paper,11pt]{article}
+\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[default, osfigures, scale=0.95]{opensans}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage[french]{babel}
 \usepackage[colorlinks, linkcolor=black]{hyperref}
+\usepackage{fullpage}
 \usepackage{verbatim}
 \usepackage{tabu}
 
 \begin{document}
-  \title{Entrées-sorties et variables}
+  \title{1) Entrées-sorties et variables}
   \author{Programmation C}
   \date{}
   \maketitle
@@ -22,11 +23,10 @@
 
 // "main" est toujours le nom de la fonction principale :
 int main() {
-  // Un message de bienvenue. Les instructions se
-  // terminent par un ";".
+  // Un message de bienvenue. Les instructions se terminent par un ";".
   printf("Bonjour.\n");
   
-  // On fini le programme en retournant la valeur 0 :
+  // On fini le programme en retournant la valeur par défaut 0 :
   return 0;
 }
   \end{verbatim}
@@ -45,9 +45,9 @@ gcc -Wall ex1.c -o ex1
   \end{description}
   
   \section{Variables}
-  Une variable permet de stocker des valeurs et de les modifier.
+  Les variables permettent de stocker des valeurs et de les modifier.
   \begin{description}
-    \item[Déclaration] Un type suivit d'une liste de noms. Les noms de variables contiennent des lettres sans accents, des chiffres ou des underscores (symbole \texttt{\_}). Ils ne peuvent pas commencer par un chiffre. On peut donner des valeurs initiales.
+    \item[Déclaration] Un type suivit d'une liste de noms. Les noms de variables contiennent des lettres sans accents, des chiffres ou des underscores (symbole \texttt{\_}). Ils ne peuvent pas commencer par un chiffre. On peut donner une valeur initiale.
       \begin{verbatim}
 int var1, x = 12, n;
       \end{verbatim}
@@ -57,12 +57,12 @@ int var1, x = 12, n;
         \hline
         \texttt{char} & 8 bits & entier & $[- 128; 127]$\\
         \texttt{short} & 16 bits & entier & $[-32.768; 32 .67]$\\
-        \texttt{int} & 32 bits & entier & $[- 2.147.483.648; 2.147.483.647]$\\
+        \texttt{int} & 32 bits & entier & $[- 2^{31}; 2^{31} - 1]$\\
         \texttt{long} & 64 bits & entier & $[- 2^{63}; 2^{63} - 1]$\\
         \hline
         \texttt{unsigned char} & 8 bits & entier & $[0; 255]$\\
         \texttt{unsigned short} & 16 bits & entier & $[0; 65.535]$\\
-        \texttt{unsigned int} & 32 bits & entier & $[0; 4.294.967.295]$\\
+        \texttt{unsigned int} & 32 bits & entier & $[0; 2^{32} - 1]$\\
         \texttt{unsigned long} & 64 bits & entier & $[0; 2^{64} - 1]$\\
         \hline
         \texttt{float} & 32 bits & flottant & $3,4 \times 10^{-38}$ à $3,4 \times 10^{38}$\\
@@ -75,4 +75,36 @@ n = n + 3;
   \end{description}
   
   \section{Entrées-sorties}
+  \begin{description}
+    \item[Lire] Avec \texttt{printf} suivit du message entre guillemets. Le \texttt{\textbackslash n} représente un retour à la ligne :
+      \begin{verbatim}
+printf("Bonjour.\n");
+      \end{verbatim}
+      Pour afficher le contenu d'une variable entière :
+      \begin{verbatim}
+printf("Valeur de x : %d\n", x);
+      \end{verbatim}
+    \item[Écrire] Avec \texttt{scanf} suivit d'un format et de variables précédées par des \texttt{\&}. Pour lire deux entiers :
+      \begin{verbatim}
+scanf("%d%d", &n1, &n2);
+      \end{verbatim}
+    \item[Codes spéciaux] Certains codes n'ont de sens que pour \texttt{printf} ou que pour \texttt{scanf} :\\
+      \begin{tabu}{c|l}
+        Code & Signification\\
+        \hline
+        \texttt{\textbackslash n} & retour à la ligne\\
+        \texttt{\textbackslash t} & tabulation\\
+        \texttt{\textbackslash "} & \texttt{"}\\
+        \texttt{\textbackslash \textbackslash} & \texttt{\textbackslash}\\
+        \hline
+        \texttt{\%d} & entier\\
+        \texttt{\%u} & entier non-signé\\
+        \texttt{\%f} & flottant\\
+        \texttt{\%.2f} & flottant avec 2 chiffres après la virgule\\
+        \texttt{\%8f} & flottant affiché avec une largeur d'au moins 8 caractères\\
+        \texttt{\%c} & caractère\\
+        \texttt{\%c*} & caractère lu puis oublié (utile pour manger des retours à la ligne)\\
+        \texttt{\%\%} & \%\\
+      \end{tabu}
+  \end{description}
 \end{document}
