--- a/1/1.tex
+++ b/1/1.tex
@@ -11,8 +11,8 @@
 
 \begin{document}
   \title{1) Entrées-sorties et variables}
-  \author{Programmation C}
-  \date{}
+  \author{Programmation C (2013-2014)}
+  \date{Guillaume Claret}
   \maketitle
   
   \section{Premier programme}
@@ -104,7 +104,7 @@ scanf("%d%d", &n1, &n2);
         \texttt{\%8f} & flottant affiché avec une largeur d'au moins 8 caractères\\
         \texttt{\%c} & caractère\\
         \texttt{\%c*} & caractère lu puis oublié (utile pour manger des retours à la ligne)\\
-        \texttt{\%\%} & \%\\
+        \texttt{\%\%} & \texttt{\%}\\
       \end{tabu}
   \end{description}
 \end{document}
