Correction: %*c instead of %c*

--- a/1/1.tex
+++ b/1/1.tex
@@ -103,7 +103,7 @@ scanf("%d%d", &n1, &n2);
         \texttt{\%.2f} & flottant avec 2 chiffres après la virgule\\
         \texttt{\%8f} & flottant affiché avec une largeur d'au moins 8 caractères\\
         \texttt{\%c} & caractère\\
-        \texttt{\%c*} & caractère lu puis oublié (utile pour manger des retours à la ligne)\\
+        \texttt{\%*c} & caractère lu puis oublié (utile pour manger des retours à la ligne)\\
         \texttt{\%\%} & \texttt{\%}\\
       \end{tabu}
   \end{description}
