--- a/1/1.tex
+++ b/1/1.tex
@@ -34,11 +34,11 @@ int main() {
   \section{Compilation}
   \begin{description}
     \item[Écriture] On crée un fichier \texttt{ex1.c} que l'on ouvre avec \texttt{gedit} (ou un autre éditeur) puis on écrit le programme.
-    \item[Compilation] À la ligne de commande (\texttt{-Wall} active tous les warnings, \texttt{ex1} est le nom de l'exécutable à générer) :
+    \item[Compilation] À la ligne de commande (\texttt{-Wall} active tous les warnings, \texttt{ex1} est le nom de l'exécutable à générer)~:
       \begin{verbatim}
 gcc -Wall ex1.c -o ex1
       \end{verbatim}
-    \item[Lancement] À la ligne de commande :
+    \item[Lancement] À la ligne de commande~:
       \begin{verbatim}
 ./ex1
       \end{verbatim}
@@ -51,7 +51,7 @@ gcc -Wall ex1.c -o ex1
       \begin{verbatim}
 int var1, x = 12, n;
       \end{verbatim}
-    \item[Types] Quelques types standards :\\
+    \item[Types] Quelques types standards~:\\
       \begin{tabu}{c|c|c|c}
         Type & Taille\footnote{Peut dépendre de l'architecture, valeurs pour un PC 64 bits sous Linux.} & Contenu & Intervalle\\
         \hline
@@ -68,7 +68,7 @@ int var1, x = 12, n;
         \texttt{float} & 32 bits & flottant & $3,4 \times 10^{-38}$ à $3,4 \times 10^{38}$\\
         \texttt{double} & 64 bits & flottant & $1,7 \times 10^{-308}$ à $1,7 \times 10^{308}$
       \end{tabu}
-    \item[Modification] La variable à modifier est à gauche. Pour ajouter 3 à \texttt{n} :
+    \item[Modification] La variable à modifier est à gauche. Pour ajouter 3 à \texttt{n}~:
       \begin{verbatim}
 n = n + 3;
       \end{verbatim}
@@ -76,19 +76,19 @@ n = n + 3;
   
   \section{Entrées-sorties}
   \begin{description}
-    \item[Lire] Avec \texttt{printf} suivit du message entre guillemets. Le \texttt{\textbackslash n} représente un retour à la ligne :
+    \item[Lire] Avec \texttt{printf} suivit du message entre guillemets. Le \texttt{\textbackslash n} représente un retour à la ligne~:
       \begin{verbatim}
 printf("Bonjour.\n");
       \end{verbatim}
-      Pour afficher le contenu d'une variable entière :
+      Pour afficher le contenu d'une variable entière~:
       \begin{verbatim}
 printf("Valeur de x : %d\n", x);
       \end{verbatim}
-    \item[Écrire] Avec \texttt{scanf} suivit d'un format et de variables précédées par des \texttt{\&}. Pour lire deux entiers :
+    \item[Écrire] Avec \texttt{scanf} suivit d'un format et de variables précédées par des \texttt{\&}. Pour lire deux entiers~:
       \begin{verbatim}
 scanf("%d%d", &n1, &n2);
       \end{verbatim}
-    \item[Codes spéciaux] Certains codes n'ont de sens que pour \texttt{printf} ou que pour \texttt{scanf} :\\
+    \item[Codes spéciaux] Certains codes n'ont de sens que pour \texttt{printf} ou que pour \texttt{scanf}~:\\
       \begin{tabu}{c|l}
         Code & Signification\\
         \hline
