--- a/3/3.tex
+++ b/3/3.tex
@@ -17,13 +17,87 @@
   
   \section{Tests}
   \subsection{If, then, else}
+  L'instruction \texttt{if} permet de réaliser un test. La condition est toujours entre parenthèses~:
+  \begin{verbatim}
+if (condition) {
+  ... // code à exécuter si la condition est vraie
+} else {
+  ... // code à exécuter si la condition est fausse
+}
+  \end{verbatim}
+  La partie \texttt{else} est optionnelle~:
+  \begin{verbatim}
+if (condition) {
+  ... // code à exécuter si la condition est vraie
+}
+  \end{verbatim}
+  Si le code à exécuter ne contient qu'une seule instruction on peut omettre les accolades~:
+  \begin{verbatim}
+if (condition)
+  printf(...); // code d'une seule instruction
+  \end{verbatim}
+  Exemple avec plusieurs \texttt{if} qui affiche «~n grand~»~:
+  \begin{verbatim}
+int n = 12;
+if (n < 0)
+  printf("n négatif\n");
+else if (n < 10)
+  printf("n petit\n");
+else
+  printf("n grand\n");
+  \end{verbatim}
   
-  
+  \newpage
   \subsection{Switch, case, default}
+  Le \texttt{switch} permet de comparer rapidement une valeur avec un ensemble fini de possibilités~:
+  \begin{verbatim}
+switch(valeur) {
+case solution_1:
+  ... // code à exécuter si la valeur = solution_1
+  break;
+...
+case solution_n:
+  ... // code à exécuter si la valeur = solution_n
+  break;
+default: // le default est optionnel
+  ... // code à exécuter sinon
+}
+  \end{verbatim}
+  
   \subsection{Mini-test}
+  On peut faire des tests dans une instruction avec l'opérateur \texttt{?:}~:
+  \begin{verbatim}
+condition ? valeur_si_vrai : valeur_si_faux
+  \end{verbatim}
+  Exemple affichant 1~:
+  \begin{verbatim}
+int n = 12;
+printf("%d\n", n > 0 ? 1 : -1);
+  \end{verbatim}
   
   \section{Booléens}
-  \subsection{Représentation}
+  Les booléens (valeurs vrai / faux) sont représentés par des entiers avec la convention~:
+  \begin{itemize}
+    \item $0$ vaut faux
+    \item toute valeur non nulle vaut vrai (souvent on prend $1$)
+  \end{itemize}
+  
   \subsection{Opérateurs logiques}
+  \begin{tabu}{cc|c|c|c}
+    a & b & a \&\& b & a || b & !\,b\\
+    \hline
+    $0$ & $0$ & $0$ & $0$ & $1$\\
+    $0$ & $1$ & $0$ & $1$ & $0$\\
+    $1$ & $0$ & $0$ & $1$ &\\
+    $1$ & $1$ & $1$ & $1$ &\\
+  \end{tabu}
+  
   \subsection{Comparaisons}
+  \begin{tabu}{cc|cc|cc|cc}
+    a & b & a == b & a != b & a < b & a <= b & a > b & a >= b\\
+    \hline
+    $12$ & $23$ & $0$ & $1$ & $1$ & $1$ & $0$ & $0$\\
+    $12$ & $12$ & $1$ & $0$ & $0$ & $1$ & $0$ & $1$\\
+    $23$ & $12$ & $0$ & $1$ & $0$ & $0$ & $1$ & $1$\\
+  \end{tabu}
 \end{document}
